"Development-3" - v:3 (Sending For Release) -  - commit 1
# (Sending For Release) : For merging from Branch "Development-3" into the "main" Branch.
# (Clean/Edited/Re-arranged Codes)

# Summary (Short) : Crud, IRepository, Repository (Complete).

--- a/Back-End/RazorEFWebApp/Blog.Web/appsettings.json
+++ b/Back-End/RazorEFWebApp/Blog.Web/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "AllowedHosts": "*",
+
   "ConnectionStrings": {
-    "BlogDbConnectionString": "Server=ASUS-TUF\\SQLEXPRESS;Database=BlogManagementDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "BlogDbConnectionString": "Server=.\\SQLEXPRESS;Database=BlogManagementDb;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
