--- a/Back-End/RazorEFWebApp/Blog.Web/appsettings.json
+++ b/Back-End/RazorEFWebApp/Blog.Web/appsettings.json
@@ -6,8 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-
   "ConnectionStrings": {
-    "BlogDbConnectionString": "Server=.\\SQLEXPRESS;Database=BlogManagementDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "BlogDbConnectionString": "Server=ASUS-TUF\\SQLEXPRESS;Database=BlogManagementDb;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
